--- a/BAEKJOON/BAEKJOON.vcxproj
+++ b/BAEKJOON/BAEKJOON.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="15596.c" />
+    <ClCompile Include="4673.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -94,9 +94,10 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <StackCommitSize>
-      </StackCommitSize>
-      <StackReserveSize>50000000</StackReserveSize>
+      <StackCommitSize>900000000</StackCommitSize>
+      <StackReserveSize>900000000</StackReserveSize>
+      <LargeAddressAware>
+      </LargeAddressAware>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
