--- a/Programmers/Programmers.vcxproj.filters
+++ b/Programmers/Programmers.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lv1-practice1.c">
+    <ClCompile Include="LV1-practice2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
